--- a/FindMe.Web.Bo/Views/App/Index.cshtml
+++ b/FindMe.Web.Bo/Views/App/Index.cshtml
@@ -177,6 +177,8 @@
             lbl_Imgs: ('@Html.GetLabel("lbl_Imgs")').encodeHtml(),
             lbl_Logos: ('@Html.GetLabel("lbl_Logos")').encodeHtml(),
             lbl_Prvw: ('@Html.GetLabel("lbl_Prvw")').encodeHtml(),
+            lbl_ImgAlt: ('@Html.GetLabel("lbl_ImgAlt")').encodeHtml(),
+            lbl_LogoAlt: ('@Html.GetLabel("lbl_LogoAlt")').encodeHtml(),
 
             erMsg_InvldEmail: ('@Html.GetMessage("erMsg_InvldEmail")').encodeHtml(),
 
@@ -193,6 +195,9 @@
             msg_SHwDstrctsCtys: ('@Html.GetMessage("msg_SHwDstrctsCtys")').encodeHtml(),
             msg_SHwGrpsCtys: ('@Html.GetMessage("msg_SHwGrpsCtys")').encodeHtml(),
             msg_TpFltrKywrds: ('@Html.GetMessage("msg_TpFltrKywrds")').encodeHtml(),
+            msg_RqrsSave: ('@Html.GetMessage("msg_RqrsSave")').encodeHtml(),
+            msg_AddRplcImg: ('@Html.GetMessage("msg_AddRplcImg")').encodeHtml(),
+            msg_AddRplcLogo: ('@Html.GetMessage("msg_AddRplcLogo")').encodeHtml(),
 
             msg_AddCty: ('@Html.GetMessage("msg_AddCty")').encodeHtml(),
             msg_RfrshCtys: ('@Html.GetMessage("msg_RfrshCtys")').encodeHtml(),
