--- a/FindMe.Web.Bo/Views/Shared/_Layout.cshtml
+++ b/FindMe.Web.Bo/Views/Shared/_Layout.cshtml
@@ -133,24 +133,15 @@
         </div>
     </div>
 
-    <script src="~/lib/bootstrap/js/bootstrap.js"></script>
     <environment names="Development">
         <script src="~/lib/jquery/jquery-3.1.1.js"></script>
-        <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
+        <script src="~/lib/bootstrap/js/bootstrap.js"></script>
         <script src="~/js/site.js" swp-cache-version="true"></script>
     </environment>
 
     <environment names="Staging,Production">
-        <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.1.1.min.js"
-                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-                asp-fallback-test="window.jQuery">
-        </script>
-
-        <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.7/bootstrap.min.js"
-                asp-fallback-src="~/lib/bootstrap/js/bootstrap.min.js"
-                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
-        </script>
-        
+        <script src="~/lib/jquery/jquery-3.1.1.min.js"></script>
+        <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
     </environment>
 
