--- a/FindMe.Web.Bo/wwwroot/Views/App/Admin/Addresses.html
+++ b/FindMe.Web.Bo/wwwroot/Views/App/Admin/Addresses.html
@@ -96,6 +96,12 @@
                                         </td>
                                         <td></td>
                                         <td>
+                                            <b>{{vm.appProps.lbl_Name}}</b>
+                                        </td>
+                                        <td>
+                                            <b>{{vm.appProps.lbl_Format}}</b>
+                                        </td>
+                                        <td>
                                             <b>{{vm.appProps.lbl_ImgAlt}}</b>
                                         </td>
                                         <td>
@@ -109,9 +115,14 @@
                                 <tbody>
                                     <tr ng-repeat="img in vm.address.images" ng-class="img.recordState === 30 ? 'inDeleteMode' : ''">
                                         <td>
-                                            <button ng-click="img.recordState = img.recordState === 30 ? 0 : 30" type="button" class="btn btn-findme btn-xs no-animate">
-                                                <span class="fa" ng-class="img.recordState === 30 ? 'fa-ban' : 'fa-trash'"></span>
-                                            </button>
+                                            <div class="btn-toolbar">
+                                                <button ng-click="vm.markImageForDeletion(img)" title="{{vm.appProps.msg_MrkAsDltn}}" type="button" class="btn btn-findme btn-xs no-animate">
+                                                    <span class="fa" ng-class="img.recordState === 30 ? 'fa-ban' : 'fa-trash'"></span>
+                                                </button>
+                                                <button ng-click="vm.revertImg(img)" type="button" class="btn btn-findme btn-xs no-animate" title="{{vm.appProps.lbl_Revert}}" ng-disabled="!img.recordState || img.recordState === 0 || img.recordState === 10">
+                                                    <span class="fa fa-undo"></span>
+                                                </button>
+                                            </div>
                                         </td>
                                         <td>
                                             <div class="img-preview-container">
@@ -123,7 +134,7 @@
                                                              alt="{{img.alt}}" />
                                                     </div>
                                                 </a>
-                                                
+
                                                 <span ng-show="img.waitingUpload" class="fa fa-save" title="{{vm.appProps.msg_RqrsSave}}"></span>
                                             </div>
                                         </td>
@@ -138,16 +149,22 @@
                                             </form>
                                         </td>
                                         <td>
-                                            <input class="form-control" ng-disabled="img.recordState === 30" ng-model="img.alt" />
+                                            <input class="form-control" ng-disabled="img.recordState === 30" ng-model="img.name" ng-change="vm.checkImagesRecordState(img)" />
                                         </td>
                                         <td>
-                                            <textarea class="form-control" ng-disabled="img.recordState === 30" ng-model="img.desc"></textarea>
+                                            <span>{{img.format}}</span>
+                                        </td>
+                                        <td>
+                                            <input class="form-control" ng-disabled="img.recordState === 30" ng-model="img.alt" ng-change="vm.checkImagesRecordState(img)" />
+                                        </td>
+                                        <td>
+                                            <textarea class="form-control" ng-disabled="img.recordState === 30" ng-model="img.desc" ng-change="vm.checkImagesRecordState(img)"></textarea>
                                         </td>
                                         <td class="text-center">
                                             <!--<span class="fa fa-2x no-animate" ng-hide="img.inEditMode" ng-class="img.active ? 'fa-check text-success' : 'fa-times text-danger'"></span>-->
 
                                             <span class="check-box">
-                                                <input type="checkbox" value="None" id="addrImgActive-{{img.id}}" name="addrImgActive-{{img.id}}" ng-model="img.active" ng-disabled="img.recordState === 30"/>
+                                                <input type="checkbox" value="None" id="addrImgActive-{{img.id}}" name="addrImgActive-{{img.id}}" ng-model="img.active" ng-disabled="img.recordState === 30" />
                                                 <label class="lbl-chkb" for="addrImgActive-{{img.id}}"></label>
                                             </span>
                                         </td>
@@ -557,6 +574,7 @@
 
                     </td>-->
                 </tr>
+                </
             </tbody>
         </table>
     </div>
