--- a/FindMe.Web.Bo/Views/App/Index.cshtml
+++ b/FindMe.Web.Bo/Views/App/Index.cshtml
@@ -11,6 +11,7 @@
 
 @section css {
     <environment names="Development">
+        <link rel="stylesheet" href="~/css/customIcons/customicons.css" swp-cache-version="true" />
         <link rel="stylesheet" href="~/css/app/wrapper.css" swp-cache-version="true" />
         <link rel="stylesheet" href="~/css/app/side-bar.css" swp-cache-version="true" />
         <link rel="stylesheet" href="~/css/app/search-bar.css" swp-cache-version="true" />
@@ -22,6 +23,7 @@
         <link rel="stylesheet" href="~/css/app/account/profile.css" swp-cache-version="true" />
     </environment>
     <environment names="Staging,Production">
+        <link rel="stylesheet" href="~/css/customIcons/customicons.min.css" swp-cache-version="true" />
         <link rel="stylesheet" href="~/css/app/wrapper.min.css" swp-cache-version="true" />
         <link rel="stylesheet" href="~/css/app/side-bar.min.css" swp-cache-version="true" />
         <link rel="stylesheet" href="~/css/app/search-bar.min.css" swp-cache-version="true" />
