--- a/FindMe.Web.Bo/wwwroot/css/app/admin/addresses.css
+++ b/FindMe.Web.Bo/wwwroot/css/app/admin/addresses.css
@@ -145,7 +145,7 @@
         }
 
         #addressesVw .modal-editor .modal-dialog .modal-content .tags-container {
-            background-color: #ffe0eb;
+            background-color: #ffe9e9;
             border-radius: 5px;
             padding: 10px;
             width: auto;
