--- a/FindMe.Web.Bo/wwwroot/css/colors.css
+++ b/FindMe.Web.Bo/wwwroot/css/colors.css
@@ -9,6 +9,11 @@
     background-color: #C00C48 !important;
 }
 
+/* FindMe's Light Main Backgroundcolor */
+.findme-color-bc-pinklight {
+    background-color: #ffe9e9 !important;
+}
+
 /* FindMe's Dark Backgroundcolor */
 .findme-color-bc-dark {
     background-color: #424242 !important;
