--- a/FindMe.Web.Bo/wwwroot/css/app/admin/addresses.css
+++ b/FindMe.Web.Bo/wwwroot/css/app/admin/addresses.css
@@ -1,5 +1,4 @@
-﻿
-#addressesVw .main-table-container table.table tr .wait-ctrl-container {
+﻿#addressesVw .main-table-container table.table tr .wait-ctrl-container {
     width: 100%;
     height: 200px;
 }
