--- a/FindMe.Web.Bo/Views/App/Index.cshtml
+++ b/FindMe.Web.Bo/Views/App/Index.cshtml
@@ -21,6 +21,7 @@
         <link rel="stylesheet" href="~/css/app/admin/categories.css" swp-cache-version="true" />
         <link rel="stylesheet" href="~/css/app/admin/addresses.css" swp-cache-version="true" />
         <link rel="stylesheet" href="~/css/app/account/profile.css" swp-cache-version="true" />
+        <link rel="stylesheet" href="~/css/app/admin/csv.css" swp-cache-version="true" />
     </environment>
     <environment names="Staging,Production">
         <link rel="stylesheet" href="~/css/customIcons/customicons.min.css" swp-cache-version="true" />
@@ -108,7 +109,7 @@
             urlUploadAddressFiles: '@Url.Action("UploadAddressFiles", "ApiAddress")',
             urlGetTags: '@Url.Action("GetTags", "ApiTag")',
             urlSaveTags: '@Url.Action("SaveTags", "ApiTag")',
-            
+
             lbl_Addresses: ('@Html.GetLabel("lbl_Addresses")').encodeHtml(),
             urlUploadCSV: '@Url.Action("UploadCSV", "ApiBulkImport")',
 
@@ -187,11 +188,19 @@
             lbl_LogoAlt: ('@Html.GetLabel("lbl_LogoAlt")').encodeHtml(),
             lbl_Revert: ('@Html.GetLabel("lbl_Revert")').encodeHtml(),
             lbl_Format: ('@Html.GetLabel("lbl_Format")').encodeHtml(),
-
             lbl_Import: ('@Html.GetLabel("lbl_Import")').encodeHtml(),
+            lbl_BrowseFile: ('@Html.GetLabel("lbl_BrowseFile")').encodeHtml(),
+            lbl_Errors: ('@Html.GetLabel("lbl_Errors")').encodeHtml(),
+            lbl_NoError: ('@Html.GetLabel("lbl_NoError")').encodeHtml(),
+            lbl_ErrorsMsg: ('@Html.GetLabel("lbl_ErrorsMsg")').encodeHtml(),
+            lbl_VwError: ('@Html.GetLabel("lbl_VwError")').encodeHtml(),
+            lbl_VwSuccess: ('@Html.GetLabel("lbl_VwSuccess")').encodeHtml(),
+            lbl_VwAll: ('@Html.GetLabel("lbl_VwAll")').encodeHtml(),
+            lbl_Check: ('@Html.GetLabel("lbl_Check")').encodeHtml(),
+            lbl_Clear: ('@Html.GetLabel("lbl_Clear")').encodeHtml(),
 
             erMsg_InvldEmail: ('@Html.GetMessage("erMsg_InvldEmail")').encodeHtml(),
-            
+
             msg_RfrshPrfl: ('@Html.GetMessage("msg_RfrshPrfl")').encodeHtml(),
             msg_SavePrfl: ('@Html.GetMessage("msg_SavePrfl")').encodeHtml(),
             msg_WtngEmailCnfrmtn: ('@Html.GetMessage("msg_WtngEmailCnfrmtn")').encodeHtml(),
