--- a/FindMe.Web.Bo/Views/App/Index.cshtml
+++ b/FindMe.Web.Bo/Views/App/Index.cshtml
@@ -200,7 +200,8 @@
             lbl_CodeSnipet: ('@Html.GetLabel("lbl_CodeSnipet")').encodeHtml(),
 
             lbl_Import: ('@Html.GetLabel("lbl_Import")').encodeHtml(),
-            lbl_BrowseFile: ('@Html.GetLabel("lbl_BrowseFile")').encodeHtml(),
+            lbl_BrowseCsvAddrFile: ('@Html.GetLabel("lbl_BrowseCsvAddrFile")').encodeHtml(),
+            lbl_BrowseCsvTimeFile: ('@Html.GetLabel("lbl_BrowseCsvTimeFile")').encodeHtml(),
             lbl_Errors: ('@Html.GetLabel("lbl_Errors")').encodeHtml(),
             lbl_NoError: ('@Html.GetLabel("lbl_NoError")').encodeHtml(),
             lbl_ErrorsMsg: ('@Html.GetLabel("lbl_ErrorsMsg")').encodeHtml(),
