--- a/FindMe.Web.Bo/wwwroot/Views/App/Admin/BulkImport.html
+++ b/FindMe.Web.Bo/wwwroot/Views/App/Admin/BulkImport.html
@@ -1,29 +1,48 @@
 ﻿<div id="bulkimportVw">
     <form id="csv-form" method="post" enctype="multipart/form-data">
-        <label class="btn btn-bs-file btn-lg btn-findme">
-            {{vm.appProps.lbl_BrowseFile}}
-            <input type="file" id="files" name="files" />
-        </label>
-        <input class="btn btn-lg btn-default" type="button" id="upload" value="{{vm.appProps.lbl_Check}}" ng-show="vm.showUpload == true" ng-click="vm.uploadCSvForm()" disabled />
-        <input class="btn btn-lg btn-default" type="button" id="clear" value="Clear" ng-show="vm.showClear == true" ng-click="vm.clearForm()" />
-        <span class="findme-color-fc-dark"><b>{{vm.filename}}</b></span>
+
+        <button type="button" class="btn btn-bs-file btn-lg btn-findme" ng-disabled="vm.addrFilename" ng-click="vm.browseGo('addrCSV')">
+            {{vm.appProps.lbl_BrowseCsvAddrFile}}
+        </button>
+        <input type="file" id="addrCSV" name="addrCSV" class="hidden"/>
+
+        <span class="findme-color-fc-dark"><b>{{vm.addrFilename}}</b></span>
+
+
+        <button type="button" class="btn btn-bs-file btn-lg btn-findme" ng-disabled="vm.timeFilename" ng-click="vm.browseGo('timeCSV')">
+            {{vm.appProps.lbl_BrowseCsvTimeFile}}
+        </button>
+        <input type="file" id="timeCSV" name="timeCSV" class="hidden"/>
+
+        <span class="findme-color-fc-dark"><b>{{vm.timeFilename}}</b></span>
+
+
+        <button class="btn btn-lg btn-default no-animate" type="button"
+               ng-show="vm.showUpload" ng-disabled="!vm.addrFilename"
+               ng-click="vm.uploadCSvForm()">
+            {{vm.appProps.lbl_Check}}
+        </button>
+
+        <button class="btn btn-lg btn-default no-animate" type="button" ng-show="vm.addrFilename || vm.timeFilename" ng-click="vm.clearForm()">
+            {{vm.appProps.lbl_Clear}}
+        </button>
     </form>
     <br />
     <br />
-    <div id="csv" ng-show="vm.showTable == true">
-        <div ng-class="vm.errorCount > 0 || vm.errormsg != '' ? 'panel panel-danger' : 'panel panel-success'">
-            <div ng-show="vm.errorCount > 0" class="panel-heading">
+    <div id="csv" class="no-animate" ng-show="vm.showTable == true">
+        <div class="no-animate" ng-class="vm.errorCount > 0 || vm.errormsg != '' ? 'panel panel-danger' : 'panel panel-success'">
+            <div ng-show="vm.errorCount > 0" class="panel-heading no-animate">
                 <span><b>{{vm.errorCount}} {{vm.appProps.lbl_Errors}}</b></span>
-                <button class="btn btn-danger btn-sm pull-right" ng-show="vm.hasSuccess == true" ng-click="vm.showAllErrors()">{{vm.appProps.lbl_VwError}}</button>
-                <button class="btn btn-success btn-sm pull-right" ng-show="vm.hasSuccess == true" ng-click="vm.showAllSuccess()">{{vm.appProps.lbl_VwSuccess}}</button>
-                <button class="btn btn-default btn-sm pull-right" ng-show="vm.hasSuccess == true" ng-click="vm.showAll()">{{vm.appProps.lbl_VwAll}}</button>
+                <button class="btn btn-danger btn-sm pull-right no-animate" ng-show="vm.hasSuccess == true" ng-click="vm.showAllErrors()">{{vm.appProps.lbl_VwError}}</button>
+                <button class="btn btn-success btn-sm pull-right no-animate" ng-show="vm.hasSuccess == true" ng-click="vm.showAllSuccess()">{{vm.appProps.lbl_VwSuccess}}</button>
+                <button class="btn btn-default btn-sm pull-right no-animate" ng-show="vm.hasSuccess == true" ng-click="vm.showAll()">{{vm.appProps.lbl_VwAll}}</button>
 
             </div>
-            <div ng-show="vm.errorCount == 0 && errormsg =='' " class="panel-heading">
+            <div ng-show="vm.errorCount == 0 && errormsg =='' " class="panel-heading no-animate">
                 <span><b>{{vm.appProps.lbl_NoError}}</b></span>
             </div>
 
-            <div ng-show="vm.errormsg != ''" class="panel-heading">
+            <div ng-show="vm.errormsg != ''" class="panel-heading no-animate">
                 <span><b>{{vm.appProps.lbl_ErrorsMsg}} {{vm.errormsg}}</b></span>
             </div>
         </div>
@@ -31,12 +50,12 @@
             <table id="csv-table" class="table table-fixed-header table-striped">
                 <thead class='header'>
                     <tr>
-                        <th ng-repeat="header in vm.tableHeaders" ng-show="header !== 'errorMessage'"><b>{{header}}</b></th>
+                        <th class="no-animate" ng-repeat="header in vm.tableHeaders" ng-show="header !== 'errorMessage'"><b>{{header}}</b></th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="address in vm.csvItems" ng-class="address.errorMessage == null ? 'success' : 'error' ">
-                        <td ng-if="!address.errorMessage" ng-repeat="header in vm.tableHeaders" ng-show="header !== 'errorMessage'">
+                    <tr class="no-animate" ng-repeat="address in vm.csvItems" ng-class="address.errorMessage == null ? 'success' : 'error' ">
+                        <td class="no-animate" ng-if="!address.errorMessage" ng-repeat="header in vm.tableHeaders" ng-show="header !== 'errorMessage'">
                             <div>
                                 {{address[header]}}
                             </div>
