--- a/FindMe.Web.Bo/Views/App/Index.cshtml
+++ b/FindMe.Web.Bo/Views/App/Index.cshtml
@@ -241,6 +241,8 @@
             msg_AddRplcDoc: ('@Html.GetMessage("msg_AddRplcDoc")').encodeHtml(),
             msg_MrkForDltn: ('@Html.GetMessage("msg_MrkForDltn")').encodeHtml(),
             msg_Use24HrFrmt: ('@Html.GetMessage("msg_Use24HrFrmt")').encodeHtml(),
+            msg_ShwHrs: ('@Html.GetMessage("msg_ShwHrs")').encodeHtml(),
+            msg_HideHrs: ('@Html.GetMessage("msg_HideHrs")').encodeHtml(),
 
             msg_AddCty: ('@Html.GetMessage("msg_AddCty")').encodeHtml(),
             msg_RfrshCtys: ('@Html.GetMessage("msg_RfrshCtys")').encodeHtml(),
