--- a/FindMe.Web.Bo/wwwroot/Views/App/Admin/BulkImport.html
+++ b/FindMe.Web.Bo/wwwroot/Views/App/Admin/BulkImport.html
@@ -4,7 +4,7 @@
         <button type="button" class="btn btn-bs-file btn-lg btn-findme" ng-disabled="vm.addrFilename" ng-click="vm.browseGo('addrCSV')">
             {{vm.appProps.lbl_BrowseCsvAddrFile}}
         </button>
-        <input type="file" id="addrCSV" name="addrCSV" class="hidden"/>
+        <input type="file" id="addrCSV" name="addrCSV" class="hidden" />
 
         <span class="findme-color-fc-dark"><b>{{vm.addrFilename}}</b></span>
 
@@ -12,14 +12,14 @@
         <button type="button" class="btn btn-bs-file btn-lg btn-findme" ng-disabled="vm.timeFilename" ng-click="vm.browseGo('timeCSV')">
             {{vm.appProps.lbl_BrowseCsvTimeFile}}
         </button>
-        <input type="file" id="timeCSV" name="timeCSV" class="hidden"/>
+        <input type="file" id="timeCSV" name="timeCSV" class="hidden" />
 
         <span class="findme-color-fc-dark"><b>{{vm.timeFilename}}</b></span>
 
 
         <button class="btn btn-lg btn-default no-animate" type="button"
-               ng-show="vm.showUpload" ng-disabled="!vm.addrFilename"
-               ng-click="vm.uploadCSvForm()">
+                ng-show="vm.showUpload" ng-disabled="!vm.addrFilename"
+                ng-click="vm.uploadCSvForm()">
             {{vm.appProps.lbl_Check}}
         </button>
 
@@ -50,11 +50,21 @@
             <table id="csv-table" class="table table-fixed-header table-striped">
                 <thead class='header'>
                     <tr>
+                        <th></th>
                         <th class="no-animate" ng-repeat="header in vm.tableHeaders" ng-show="header !== 'errorMessage'"><b>{{header}}</b></th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="no-animate" ng-repeat="address in vm.csvItems" ng-class="address.errorMessage == null ? 'success' : 'error' ">
+                    <tr ng-repeat-start="address in vm.csvItems" ng-class="address.errorMessage == null ? 'success' : 'error' ">
+                        <td>
+                            <div ng-if="!address.errorMessage" ng-hide="!address._DaysCsv || address._DaysCsv.length === 0">
+                                <button type="button" class="btn btn-sm btn-findme" style="width: 32px; height: 32px; border-radius: 50%; outline: none;"
+                                        ng-click="address.showHrs = !address.showHrs"
+                                        title="{{(address.showHrs ? vm.appProps.msg_HideHrs : vm.appProps.msg_ShwHrs)}}">
+                                    <span class="fa" ng-class="address.showHrs ? 'fa-minus' : 'fa-plus'"></span>
+                                </button>
+                            </div>
+                        </td>
                         <td class="no-animate" ng-if="!address.errorMessage" ng-repeat="header in vm.tableHeaders" ng-show="header !== 'errorMessage'">
                             <div>
                                 {{address[header]}}
@@ -69,6 +79,30 @@
                             <div>
                                 {{address.errorMessage}}
                             </div>
+                        </td>
+                    </tr>
+                    <tr ng-if="address._DaysCsv && address._DaysCsv.length > 0" ng-repeat-end uib-collapse="!address.showHrs">
+                        <td></td>
+                        <td colspan="{{vm.tableHeaders.length}}">
+                            <table class="table table-fixed-header table-striped" ng-repeat="day in address._DaysCsv" style="max-width: 450px;">
+                                <thead>
+                                    <tr>
+                                        <th class="col-md-4"><b>{{day.name}}</b></th>
+                                        <th class="col-md-4"><b>{{vm.appProps.lbl_From}}</b></th>
+                                        <th class="col-md-4"><b>{{vm.appProps.lbl_To}}</b></th>
+                                    </tr>
+                                </thead>
+                                <tbody ng-if="day.values && day.values.length > 0">
+                                    <tr ng-repeat="rng in day.values">
+                                        <td></td>
+                                        <td ng-if="!rng.errorMessage">{{(rng.hourFrom > 9? rng.hourFrom : ('0' + rng.hourFrom))}}&nbsp;<b>:</b>&nbsp;{{(rng.minFrom > 9? rng.minFrom : ('0' + rng.minFrom))}}</td>
+                                        <td ng-if="!rng.errorMessage">{{(rng.hourTo > 9? rng.hourTo : ('0' + rng.hourTo))}}&nbsp;<b>:</b>&nbsp;{{(rng.minTo > 9? rng.minTo : ('0' + rng.minTo))}}</td>
+                                        <td ng-if="rng.errorMessage" colspan="2">
+                                            <p>{{rng.errorMessage}}</p>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </td>
                     </tr>
                 </tbody>
