--- a/FindMe.Web.Bo/Views/App/Index.cshtml
+++ b/FindMe.Web.Bo/Views/App/Index.cshtml
@@ -46,6 +46,7 @@
         <script src="~/lib/angular-route/angular-route.js"></script>
         <script src="~/lib/angular-animate/angular-animate.js"></script>
         <script src="~/lib/angular-touch/angular-touch.js"></script>
+        <script src="~/lib/angular-file-saver/angular-file-saver.bundle.js"></script>
         <script src="~/lib/ui-bootstrap/ui-bootstrap-tpls-2.5.0.js"></script>
         <script src="~/lib/ui-bootstrap-fontawesome/ui-bootstrap-fontawesome.js"></script>
         <script src="~/js/app/index.js" swp-cache-version="true"></script>
@@ -57,6 +58,7 @@
         <script src="~/lib/angular-route/angular-route.min.js"></script>
         <script src="~/lib/angular-animate/angular-animate.min.js"></script>
         <script src="~/lib/angular-touch/angular-touch.min.js"></script>
+        <script src="~/lib/angular-file-saver/angular-file-saver.bundle.min.js"></script>
         <script src="~/lib/ui-bootstrap/ui-bootstrap-tpls-2.5.0.min.js"></script>
         <script src="~/lib/ui-bootstrap-fontawesome/ui-bootstrap-fontawesome.min.js"></script>
         <script src="~/js/app/index.min.js" swp-cache-version="true"></script>
