--- a/FindMe.Web.Bo/wwwroot/Views/App/Admin/BulkImport.html
+++ b/FindMe.Web.Bo/wwwroot/Views/App/Admin/BulkImport.html
@@ -29,6 +29,8 @@
     </form>
     <br />
 
+
+
     <div ng-show="vm.catExist == false">
         <span><b>{{vm.categoryCount}} error(s)</b></span>
         <button data-toggle="collapse" data-target="#dbErros" class="btn btn-danger">View</button>
@@ -140,6 +142,11 @@
                     </tr>
                 </tbody>
             </table>
+        </div>
+        <div class="pull-right">
+            <a href="" class="btn btn-dark btn-small" ng-click="vm.download(vm.log.text)">
+                Download Log
+            </a>
         </div>
     </div>
 </div>
